--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <nav class="w-screen z-[4] sticky h-20 left-0 top-0 bg-white">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
         <div class="flex justify-between items-center h-full">
-          <div class="flex-shrink-0">
-            <a href="/" id="logo"
-              class="logo font-bold text-2xl md:text-2xl lg:text-2xl uppercase font-[Montserrat]">Timestech</a>
+          <div class="w-[50%] h-full flex justify-start items-center">
+            <img src="../public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain mb-4">
           </div>
+
 
           <div class="hidden md:flex space-x-10">
             <a href="/" class="text-[#28abe3] uppercase text-lg font-light font-[DM] hover:text-blue-300">Home</a>
@@ -212,12 +212,12 @@
         </div>
       </section>
 
-      <div class="swiper w-full select-none font-[DM] bg-red-800">
-        <div class="swiper-wrapper w-full h-[30vh]">
+      <div class="swiper w-full select-none font-[DM] py-12 bg-[#28abe3]">
+        <div class="swiper-wrapper w-full h-[30vh] py-12">
 
           <div
-            class="swiper-slide w-full bg-[#28abe3] text-white  flex justify-center flex-col items-center px-5 py-24">
-            <h4 class="font-bold lg:text-xl text-center lg:w-[70%]">"We are very happy with Timestech Softwares for
+            class="swiper-slide w-full  text-white  flex justify-center flex-col items-center px-5 py-24">
+            <h4 class="font-light lg:text-xl text-center lg:w-[70%]">"We are very happy with Timestech Softwares for
               creating
               the website for our company - Futuristic Trade DMCC. The design is sleek and professional, perfectly
               reflecting our brand. Navigation is very user friendly, making it easy for everyone to access important
@@ -225,7 +225,7 @@
 
             <div class="w-full flex justify-center items-center py-4">
               <a href="https://www.futuristictradedmcc.com/"
-                class="bg-white text-[#28abe3] px-4 py-2 rounded-full">Visit Site <i
+                class="bg-white text-[#28abe3] px-4 py-2 mt-10 rounded-full">Visit Site <i
                   class="ri-arrow-right-up-line"></i></a>
             </div>
           </div>
