--- a/pages/about.html
+++ b/pages/about.html
@@ -40,9 +40,10 @@
         <nav class="w-screen z-[4] sticky h-20 left-0 top-0 bg-white">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
               <div class="flex justify-between items-center h-full">
-                <div class="flex-shrink-0">
-                  <a href="/" id="logo" class="logo font-bold text-2xl md:text-2xl lg:text-2xl uppercase font-[Montserrat]">Timestech</a>
-                </div>
+                <div class="w-[50%] h-full flex justify-start items-center">
+                    <img src="../public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain mb-4">
+                  </div>
+        
       
                 <div class="hidden md:flex space-x-10">
                   <a href="/"
