--- a/pages/services.html
+++ b/pages/services.html
@@ -42,14 +42,12 @@
 
             <!-- Top Navigation Bar -->
             <nav class="w-screen z-[4] sticky h-20 left-0 top-0 bg-white">
+
                 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
+
                   <div class="flex justify-between  items-center h-full">
-                    <div class="w-20">
-
-                      <a href="/" id="logo" class="logo font-bold text-2xl md:text-2xl lg:text-2xl uppercase font-[Montserrat]">
-                        <img src="../public/logo.png" alt="" class="w-24"/>
-                      </a>
-
+                    <div class="w-[50%] h-full flex justify-start items-center">
+                      <img src="../public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain mb-4">
                     </div>
           
                     <div class="hidden md:flex space-x-10">
@@ -78,6 +76,9 @@
 
                   </div>
                 </div>
+
+
+                <!-- Mobile Menu -->
                 <div id="mobile-menu" class="hidden md:hidden">
                   <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white font-[DM]">
                     <a href="/"
