--- a/pages/contact.html
+++ b/pages/contact.html
@@ -135,7 +135,7 @@
                         <ul class="space-y-4">
                             <li class="flex items-center">
                                 <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[DM] text-lg">10 Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
+                                <span class="font-[DM] text-lg">Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
                                     388530</span>
                             </li>
                             <li class="flex items-center">
